add submodule for braft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -453,6 +453,7 @@ include (cmake/find_hyperscan.cmake)
 include (cmake/find_mimalloc.cmake)
 include (cmake/find_simdjson.cmake)
 include (cmake/find_rapidjson.cmake)
+include (cmake/find_braft.cmake)
 
 find_contrib_lib(cityhash)
 find_contrib_lib(farmhash)
@@ -545,4 +546,5 @@ if (GLIBC_COMPATIBILITY OR USE_INTERNAL_UNWIND_LIBRARY_FOR_EXCEPTION_HANDLING)
     add_default_dependencies(base64)
     add_default_dependencies(readpassphrase)
     add_default_dependencies(unwind_static)
+    add_default_dependencies(braft)
 endif ()
