--- a/contrib/brpc-cmake/CMakeLists.txt
+++ b/contrib/brpc-cmake/CMakeLists.txt
@@ -7,104 +7,177 @@ if (NOT USE_INTERNAL_PROTOBUF_LIBRARY)
     endif ()
 endif()
 
-set (BRAFT_INCLUDE_DIR "${CMAKE_CURRENT_BINARY_DIR}/output/include")
-set (BRAFT_SRC_DIR "${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft")
+find_package(GFLAGS REQUIRED)
 
-set (Protobuf_IMPORT_DIRS "${ClickHouse_SOURCE_DIR}/contrib/braft/src")
+set (BRPC_SOURCE_DIR "${ClickHouse_SOURCE_DIR}/contrib/brpc")
+
 set(PROTO_FILES
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/builtin_service.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/cli.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/enum.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/errno.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/file_service.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/local_file_meta.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/local_storage.proto
-    ${ClickHouse_SOURCE_DIR}/contrib/braft/src/braft/raft.proto
+    ${BRPC_SOURCE_DIR}/src/idl_options.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/rtmp.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/rpc_dump.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/get_favicon.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/span.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/builtin_service.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/get_js.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/errno.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/nshead_meta.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/options.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/policy/baidu_rpc_meta.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/policy/hulu_pbrpc_meta.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/policy/public_pbrpc_meta.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/policy/sofa_pbrpc_meta.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/policy/mongo.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/trackme.proto
+    ${BRPC_SOURCE_DIR}/src/brpc/streaming_rpc_meta.proto
 )
 
 if(USE_PROTOBUF)
     PROTOBUF_GENERATE_CPP(PROTO_SOURCES PROTO_HEADERS ${PROTO_FILES})
 endif()
 
+#configure_file(${BRPC_SOURCE_DIR}/config.h.in ${PROJECT_SOURCE_DIR}/src/butil/config.h @ONLY)
 
-set (BRAFT_SRC
-    ${BRAFT_SRC_DIR}/ballot.cpp
-    ${BRAFT_SRC_DIR}/ballot_box.cpp
-    ${BRAFT_SRC_DIR}/builtin_service_impl.cpp
-    ${BRAFT_SRC_DIR}/cli.cpp
-    ${BRAFT_SRC_DIR}/cli_service.cpp
-    ${BRAFT_SRC_DIR}/closure_queue.cpp
-    ${BRAFT_SRC_DIR}/configuration.cpp
-    ${BRAFT_SRC_DIR}/configuration_manager.cpp
-    ${BRAFT_SRC_DIR}/file_reader.cpp
-    ${BRAFT_SRC_DIR}/file_service.cpp
-    ${BRAFT_SRC_DIR}/file_system_adaptor.cpp
-    ${BRAFT_SRC_DIR}/fsm_caller.cpp
-    ${BRAFT_SRC_DIR}/fsync.cpp
-    ${BRAFT_SRC_DIR}/log.cpp
-    ${BRAFT_SRC_DIR}/log_entry.cpp
-    ${BRAFT_SRC_DIR}/log_manager.cpp
-    ${BRAFT_SRC_DIR}/memory_log.cpp
-    ${BRAFT_SRC_DIR}/node.cpp
-    ${BRAFT_SRC_DIR}/node_manager.cpp
-    ${BRAFT_SRC_DIR}/protobuf_file.cpp
-    ${BRAFT_SRC_DIR}/raft.cpp
-    ${BRAFT_SRC_DIR}/raft_meta.cpp
-    ${BRAFT_SRC_DIR}/raft_service.cpp
-    ${BRAFT_SRC_DIR}/remote_file_copier.cpp
-    ${BRAFT_SRC_DIR}/repeated_timer_task.cpp
-    ${BRAFT_SRC_DIR}/replicator.cpp
-    ${BRAFT_SRC_DIR}/route_table.cpp
-    ${BRAFT_SRC_DIR}/snapshot.cpp
-    ${BRAFT_SRC_DIR}/snapshot_executor.cpp
-    ${BRAFT_SRC_DIR}/snapshot_throttle.cpp
-    ${BRAFT_SRC_DIR}/storage.cpp
-    ${BRAFT_SRC_DIR}/util.cpp
+set(BUTIL_SOURCES
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/dmg_fp/g_fmt.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/dmg_fp/dtoa_wrapper.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/dynamic_annotations/dynamic_annotations.c
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/icu/icu_utf.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/superfasthash/superfasthash.c
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/modp_b64/modp_b64.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/nspr/prtime.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/symbolize/demangle.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/symbolize/symbolize.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/snappy/snappy-sinksource.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/snappy/snappy-stubs-internal.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/snappy/snappy.cc
+        ${BRPC_SOURCE_DIR}/src/butil/third_party/murmurhash3/murmurhash3.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/arena.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/at_exit.cc
+        ${BRPC_SOURCE_DIR}/src/butil/atomicops_internals_x86_gcc.cc
+        ${BRPC_SOURCE_DIR}/src/butil/base64.cc
+        ${BRPC_SOURCE_DIR}/src/butil/big_endian.cc
+        ${BRPC_SOURCE_DIR}/src/butil/cpu.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/alias.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/asan_invalid_access.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/crash_logging.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/debugger.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/debugger_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/dump_without_crashing.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/proc_maps_linux.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/stack_trace.cc
+        ${BRPC_SOURCE_DIR}/src/butil/debug/stack_trace_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/environment.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/file.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/file_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/file_enumerator.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/file_enumerator_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/file_path.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/file_path_constants.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/memory_mapped_file.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/memory_mapped_file_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/scoped_file.cc
+        ${BRPC_SOURCE_DIR}/src/butil/files/scoped_temp_dir.cc
+        ${BRPC_SOURCE_DIR}/src/butil/file_util.cc
+        ${BRPC_SOURCE_DIR}/src/butil/file_util_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/guid.cc
+        ${BRPC_SOURCE_DIR}/src/butil/guid_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/hash.cc
+        ${BRPC_SOURCE_DIR}/src/butil/lazy_instance.cc
+        ${BRPC_SOURCE_DIR}/src/butil/location.cc
+        ${BRPC_SOURCE_DIR}/src/butil/md5.cc
+        ${BRPC_SOURCE_DIR}/src/butil/memory/aligned_memory.cc
+        ${BRPC_SOURCE_DIR}/src/butil/memory/ref_counted.cc
+        ${BRPC_SOURCE_DIR}/src/butil/memory/ref_counted_memory.cc
+        ${BRPC_SOURCE_DIR}/src/butil/memory/singleton.cc
+        ${BRPC_SOURCE_DIR}/src/butil/memory/weak_ptr.cc
+        ${BRPC_SOURCE_DIR}/src/butil/posix/file_descriptor_shuffle.cc
+        ${BRPC_SOURCE_DIR}/src/butil/posix/global_descriptors.cc
+        ${BRPC_SOURCE_DIR}/src/butil/process_util.cc
+        ${BRPC_SOURCE_DIR}/src/butil/rand_util.cc
+        ${BRPC_SOURCE_DIR}/src/butil/rand_util_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/fast_rand.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/safe_strerror_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/sha1_portable.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/latin1_string_conversions.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/nullable_string16.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/safe_sprintf.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/string16.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/string_number_conversions.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/string_split.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/string_piece.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/string_util.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/string_util_constants.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/stringprintf.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/utf_offset_string_conversions.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/utf_string_conversion_utils.cc
+        ${BRPC_SOURCE_DIR}/src/butil/strings/utf_string_conversions.cc
+        ${BRPC_SOURCE_DIR}/src/butil/synchronization/cancellation_flag.cc
+        ${BRPC_SOURCE_DIR}/src/butil/synchronization/condition_variable_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/synchronization/waitable_event_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/non_thread_safe_impl.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/platform_thread_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/simple_thread.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_checker_impl.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_collision_warner.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_id_name_manager.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_local_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_local_storage.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_local_storage_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/thread_restrictions.cc
+        ${BRPC_SOURCE_DIR}/src/butil/threading/watchdog.cc
+        ${BRPC_SOURCE_DIR}/src/butil/time/clock.cc
+        ${BRPC_SOURCE_DIR}/src/butil/time/default_clock.cc
+        ${BRPC_SOURCE_DIR}/src/butil/time/default_tick_clock.cc
+        ${BRPC_SOURCE_DIR}/src/butil/time/tick_clock.cc
+        ${BRPC_SOURCE_DIR}/src/butil/time/time.cc
+        ${BRPC_SOURCE_DIR}/src/butil/time/time_posix.cc
+        ${BRPC_SOURCE_DIR}/src/butil/version.cc
+        ${BRPC_SOURCE_DIR}/src/butil/logging.cc
+        ${BRPC_SOURCE_DIR}/src/butil/class_name.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/errno.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/find_cstr.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/status.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/string_printf.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/thread_local.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/unix_socket.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/endpoint.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/fd_utility.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/files/temp_file.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/files/file_watcher.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/time.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/zero_copy_stream_as_streambuf.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/crc32c.cc
+        ${BRPC_SOURCE_DIR}/src/butil/containers/case_ignored_flat_map.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/iobuf.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/binary_printer.cpp
+        ${BRPC_SOURCE_DIR}/src/butil/popen.cpp
+        )
 
-    ${BRAFT_SRC_DIR}/closure_helper.h
-    ${BRAFT_SRC_DIR}/builtin_service_impl.h
-    ${BRAFT_SRC_DIR}/configuration.h
-    ${BRAFT_SRC_DIR}/file_service.h
-    ${BRAFT_SRC_DIR}/log.h
-    ${BRAFT_SRC_DIR}/node_manager.h
-    ${BRAFT_SRC_DIR}/fsync.h
-    ${BRAFT_SRC_DIR}/node.h
-    ${BRAFT_SRC_DIR}/log_manager.h
-    ${BRAFT_SRC_DIR}/memory_log.h
-    ${BRAFT_SRC_DIR}/ballot_box.h
-    ${BRAFT_SRC_DIR}/macros.h
-    ${BRAFT_SRC_DIR}/log_entry.h
-    ${BRAFT_SRC_DIR}/fsm_caller.h
-    ${BRAFT_SRC_DIR}/cli.h
-    ${BRAFT_SRC_DIR}/cli_service.h
-    ${BRAFT_SRC_DIR}/configuration_manager.h
-    ${BRAFT_SRC_DIR}/ballot.h
-    ${BRAFT_SRC_DIR}/closure_queue.h
-    ${BRAFT_SRC_DIR}/file_system_adaptor.h
-    ${BRAFT_SRC_DIR}/file_reader.h
-    ${BRAFT_SRC_DIR}/protobuf_file.h
-    ${BRAFT_SRC_DIR}/raft.h
-    ${BRAFT_SRC_DIR}/raft_meta.h
-    ${BRAFT_SRC_DIR}/raft_service.h
-    ${BRAFT_SRC_DIR}/remote_file_copier.h
-    ${BRAFT_SRC_DIR}/repeated_timer_task.h
-    ${BRAFT_SRC_DIR}/replicator.h
-    ${BRAFT_SRC_DIR}/route_table.h
-    ${BRAFT_SRC_DIR}/snapshot.h
-    ${BRAFT_SRC_DIR}/snapshot_executor.h
-    ${BRAFT_SRC_DIR}/snapshot_throttle.h
-    ${BRAFT_SRC_DIR}/storage.h
-    ${BRAFT_SRC_DIR}/util.h
-)
-
-add_library(${BRAFT_LIBRARY} ${BRAFT_SRC} ${PROTO_SOURCES} ${PROTO_HEADERS})
-
-if (USE_INTERNAL_PROTOBUF_LIBRARY)
-    add_dependencies(${BRAFT_LIBRARY} protoc)
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    set(BUTIL_SOURCES ${BUTIL_SOURCES}
+            ${BRPC_SOURCE_DIR}/src/butil/file_util_linux.cc
+            ${BRPC_SOURCE_DIR}/src/butil/threading/platform_thread_linux.cc
+            ${BRPC_SOURCE_DIR}/src/butil/strings/sys_string_conversions_posix.cc)
 endif()
 
-target_include_directories(${BRAFT_LIBRARY} PRIVATE ${PROTO_HEADERS})
-target_include_directories(${BRAFT_LIBRARY} PRIVATE ${BRAFT_INCLUDE_DIR})
-target_include_directories(${BRAFT_LIBRARY} PRIVATE ${Protobuf_INCLUDE_DIR})
-target_include_directories(${BRAFT_LIBRARY} SYSTEM PUBLIC "${BRAFT_INCLUDE_DIR}")
-target_include_directories(${BRAFT_LIBRARY} PRIVATE ${ClickHouse_SOURCE_DIR}/contrib/braft/src)
+
+file(GLOB_RECURSE BVAR_SOURCES "${BRPC_SOURCE_DIR}/src/bvar/*.cpp")
+file(GLOB_RECURSE BTHREAD_SOURCES "${BRPC_SOURCE_DIR}/src/bthread/*.cpp")
+file(GLOB_RECURSE JSON2PB_SOURCES "${BRPC_SOURCE_DIR}/src/json2pb/*.cpp")
+file(GLOB_RECURSE BRPC_SOURCES "${BRPC_SOURCE_DIR}/src/brpc/*.cpp")
+file(GLOB_RECURSE THRIFT_SOURCES "thrift*.cpp")
+
+foreach(v ${THRIFT_SOURCES})
+    list(REMOVE_ITEM BRPC_SOURCES ${v})
+endforeach()
+
+set(MCPACK2PB_SOURCES
+        ${BRPC_SOURCE_DIR}/src/mcpack2pb/field_type.cpp
+        ${BRPC_SOURCE_DIR}/src/mcpack2pb/mcpack2pb.cpp
+        ${BRPC_SOURCE_DIR}/src/mcpack2pb/parser.cpp
+        ${BRPC_SOURCE_DIR}/src/mcpack2pb/serializer.cpp
+)
+
+set(BRPC_INCLUDE ${BRPC_SOURCE_DIR}/src)
+
+add_library(brpc ${BUTIL_SOURCES} ${BVAR_SOURCES} ${BTHREAD_SOURCES} ${JSON2PB_SOURCES} ${BRPC_SOURCES} ${PROTO_SOURCES} ${PROTO_HEADERS})
